@@ -3,6 +3,8 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.5
+** new commands refresh and redisplay
+
 ** new command list-window-properties
 
 ** AltGr works
